<resources>
    <string name="app_name">Reztro</string>
    <string name="titulo">Reztro</string>

    <!-- login -->
    <string name="title_iniciar_sesion">Iniciar Sesión</string>
    <string name="text_correo">Correo Electrónico</string>
    <string name="correo_hint">Ingrese tu correo</string>
    <string name="text_password">Contraseña</string>
    <string name="password_hint">Ingrese tu contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="text_no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="text_crear_cuenta">Crear cuenta</string>

    <!-- Register -->
    <string name="title_crear_cuenta">Crea tu cuenta</string>
    <string name="text_nombre">Nombre:</string>
    <string name="nombre_hint">Ingrese su nombre</string>
    <string name="text_confirmar_password">Confirmar contraseña:</string>
    <string name="confirmar_password_hint">Confirme su contraseña</string>
    <string name="btn_registrar">Crear cuenta</string>
    <string name="text_ya_tienes_cuenta">¿Ya tienes una cuenta?</string>
    <string name="text_iniciar_sesion">Iniciar sesión</string>
    <string name="text_dni">Dni: </string>
    <string name="dni_hint">Ingrese su dni</string>
    <!-- Validations-->
    <string name="valid_correo_requerido">Debes ingresar un correo</string>
    <string name="valid_correo_formato">El formato del correo no es válido</string>
    <string name="valid_password_requerido">La contraseña es obligatoria</string>
    <string name="valid_password_min">La contraseña debe tener al menos 6 caracteres</string>
    <string name="valid_passwords_no_coinciden">Las contraseñas no coinciden</string>

    <!-- Dialogs -->
    <string name="msg_registrando">Registrando usuario...</string>
    <string name="registro_exitoso">¡Te registraste exitosamente!</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="toast_registro_completo">Registro completado</string>

    <!-- Main -->
    <string name="hola_usuario">Hola, %1$s</string>
    <string name="text_restaurantes_destacados">Restaurantes destacados</string>

    <!-- Reservation -->
    <string name="title_reserva">Reserva una mesa en %1$s</string>
    <string name="text_fecha_reserva">Selecciona una fecha para tu reserva:</string>
    <string name="text_hora_reserva">Escoge una hora para tu reserva:</string>
    <string name="text_num_personas">N° de personas:</string>
    <string name="btn_continuar">Continuar</string>

    <!-- Reservation confirmed-->
    <string name="listo_usuario">Listo, %1$s</string>
    <string name="title_confirmar_reserva">Datos de tu reservación</string>
    <string name="text_restaurante">Restaurante:</string>
    <string name="text_fecha">Fecha:</string>
    <string name="text_hora">Hora:</string>
    <string name="text_num_asientos">N° de asientos:</string>
    <string name="text_num_mesa">N° de mesa:</string>
    <string name="btn_confirmar_reserva">Confirmar</string>
    <string name="restaurantes_destacados">Restaurantes destacados</string>
    <string name="miraflores_scroll">Miraflores</string>
    <string name="rating_restaurant_item">5</string>
    <string name="nombre_restaurant_item">Miguelon</string>
    <string name="reservar_button_item">Reservar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_modo_oscuro">🌙</string>
    <string name="imagen_del_restaurante">Imagen del restaurant</string>
    <string name="nombre_del_restaurante_item">Nombre del Restaurante</string>
    <string name="ratting_item">⭐ 4.5</string>
    <string name="distrito_miraflores">Distrito: %2$s</string>
    <string name="carta_item">Platos a la carta</string>
    <string name="confirmar_reserva">Confirmar</string>
    <string name="cancelar_reserva">Cancelar</string>
    <string name="resumen_de_la_reserva_fragment">Resumen de la reserva</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>