<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageDetalle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="90dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/imagen_del_restaurante" />

        <TextView
            android:id="@+id/textDetalleNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_restaurante_item"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textDetalleRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratting_item"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textDetalleDistrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distrito_miraflores"
            android:textSize="16sp"
            android:layout_marginTop="4dp" />

        <Button
            android:id="@+id/btnReservar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/reservar_button_item" />

        <TextView
            android:id="@+id/tvDetalleCarta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/carta_item"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
