<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/zorrito_bienvenida" />

            <TextView
                android:id="@+id/tvBienvenida"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/listo_usuario"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTituloConfirmarReserva"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro"
            android:gravity="center"
            android:text="@string/title_confirmar_reserva"
            android:textColor="@color/title_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRestauranteReserva"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_restaurante"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvHoraReserva"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_hora"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFechaReserva"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_fecha"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNumAsientos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_num_asientos"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvNumMesa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_num_mesa"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="200dp"
            android:backgroundTint="@color/btn_color"
            android:fontFamily="@font/sfpro"
            android:text="@string/btn_confirmar_reserva"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>