<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UsuarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTituloRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_crear_cuenta"
            android:textColor="@color/title_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/sfpro"/>

        <ImageView
            android:id="@+id/ivZorro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/zorrito_registro" />

        <TextView
            android:id="@+id/tvNombreRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_nombre"
            android:textColor="@color/text_color"
            android:textSize="19.60sp" />

        <EditText
            android:id="@+id/etNombreRegistro"
            android:layout_width="match_parent"
            android:layout_height="47.50dp"
            android:layout_marginTop="5dp"
            android:paddingTop="7dp"
            android:paddingBottom="4dp"
            android:autofillHints="name"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/sfpro"
            android:hint="@string/nombre_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCorreoRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_correo"
            android:textColor="@color/text_color"
            android:textSize="19.60sp" />

        <EditText
            android:id="@+id/etCorreoRegistro"
            android:layout_width="match_parent"
            android:layout_height="47.50dp"
            android:layout_marginTop="5dp"
            android:paddingTop="7dp"
            android:paddingBottom="4dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/sfpro"
            android:hint="@string/correo_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/tvPasswordRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_password"
            android:textColor="@color/text_color"
            android:textSize="19.60sp" />

        <EditText
            android:id="@+id/etPasswordRegistro"
            android:layout_width="match_parent"
            android:layout_height="47.50dp"
            android:layout_marginTop="5dp"
            android:paddingTop="7dp"
            android:paddingBottom="4dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/sfpro"
            android:hint="@string/confirmar_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvConfirmarPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_confirmar_password"
            android:textColor="@color/text_color"
            android:textSize="19.60sp" />

        <EditText
            android:id="@+id/etConfirmarPassword"
            android:layout_width="match_parent"
            android:layout_height="47.50dp"
            android:layout_marginTop="5dp"
            android:paddingTop="7dp"
            android:paddingBottom="4dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/sfpro"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_dni"
            android:textColor="@color/text_color"
            android:textSize="19.60sp"
            />
        <EditText
            android:id="@+id/etDni"
            android:layout_width="match_parent"
            android:layout_height="47.50dp"
            android:layout_marginTop="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="4dp"
            android:autofillHints="none"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/sfpro"
            android:hint="@string/dni_hint"
            android:inputType="text"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/btnRegistrarUsuario"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/btn_color"
            android:fontFamily="@font/sfpro"
            android:text="@string/btn_registrar"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <LinearLayout
            android:id="@+id/irALcogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvYaTienesCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sfpro"
                android:text="@string/text_ya_tienes_cuenta"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvIniciarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/sfpro"
                android:text="@string/text_iniciar_sesion"
                android:textColor="@color/important_text"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>