<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro"
            android:gravity="center"
            android:text="@string/title_iniciar_sesion"
            android:textColor="@color/title_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivZorro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/zorrito_login" />

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_correo"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/sfpro"
            android:hint="@string/correo_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp"
            app:layout_constraintWidth_percent="0.85" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sfpro"
            android:text="@string/text_password"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/sfpro"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp"
            app:layout_constraintWidth_percent="0.85" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/btn_color"
            android:fontFamily="@font/sfpro"
            android:text="@string/btn_ingresar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <LinearLayout
            android:id="@+id/irARegistro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNoTienesCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sfpro"
                android:text="@string/text_no_tienes_cuenta"
                android:textColor="@color/text_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvCrearCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/sfpro"
                android:text="@string/text_crear_cuenta"
                android:textColor="@color/important_text"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>