<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/zorrito_bienvenida" />

    <TextView
        android:id="@+id/tvBienvenidaReserva"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp"
        android:gravity="center_vertical"
        android:text="@string/hola_usuario"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvTituloReserva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sfpro"
        android:text="@string/title_reserva"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvBienvenidaReserva"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvFechaReserva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sfpro"
        android:text="@string/text_fecha_reserva"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTituloReserva"
        app:layout_constraintStart_toStartOf="@+id/tvTituloReserva"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloReserva" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tvFechaReserva"
        app:layout_constraintStart_toStartOf="@+id/tvFechaReserva"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaReserva" />

    <TextView
        android:id="@+id/tvHoraReserva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sfpro"
        android:text="@string/text_hora_reserva"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/calendarView"
        app:layout_constraintStart_toStartOf="@+id/calendarView"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <Spinner
        android:id="@+id/spHora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tvHoraReserva"
        app:layout_constraintStart_toStartOf="@+id/tvHoraReserva"
        app:layout_constraintTop_toBottomOf="@+id/tvHoraReserva" />

    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="@font/sfpro"
        android:text="@string/btn_continuar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/spHora"
        app:layout_constraintStart_toStartOf="@+id/spHora"
        app:layout_constraintTop_toBottomOf="@+id/spHora" />

</androidx.constraintlayout.widget.ConstraintLayout>